correct spacing in marketing header for join button

--- a/assets/linker/styles/marketing-header.css
+++ b/assets/linker/styles/marketing-header.css
@@ -149,6 +149,13 @@
   padding-right: 0px;
 }
 
+
+@media (max-width: 767px) {
+#marketing-header .navbar-collapse {
+  padding-right: 25px;
+}
+}
+
 /* MARKETING HEADER LINE */
 
 #marketing-header.line .container {
